# Particle-OpenGL-in-C

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: helpers.h
include/KHR/: khrplatform.h
include/camera/: camera.h
include/glad/: glad.h
include/particle/: particle_system.h
include/shader/: shader.h
shaders/: shader.vert
src/: camera.c  glad.c  helpers.c  particle_system.c  shader.c
